# ada-to-zig-bench

./: .gitignore  README.md  go.mod
.github/workflows/: benchmarks.yml  server-implementation-tests.yml
docs/: server-implementation-contract.md
schemas/: activity_metrics.schema.json  loadgen_errors.schema.json  loadgen_metrics.schema.json  metadata.schema.json  runtime_events.schema.json  runtime_metrics.schema.json  server_events.schema.json  server_metrics.schema.json
scripts/: check-http-json-server.mjs  deploy-web.sh  manifest-field.mjs  prepare-server-dependencies.mjs  run-latitude-benchmarks.sh  run-local.sh  setup-toolchains.sh  test-server-implementations.sh
servers/ada-gnat/: bench.json  bench_ada_gnat.gpr
servers/bun/: bench.json  package.json
servers/c-libmicrohttpd/: bench.json
servers/cpp-boost-beast/: bench.json
servers/csharp-aspnetcore/: Program.cs  bench.json
servers/elixir-plug-cowboy/: bench.json  mix.exs
servers/erlang-cowboy/: bench.json  rebar.config
servers/go-nethttp/: bench.json  main.go
servers/java-httpserver/: bench.json
servers/node/: bench.json  package.json
servers/python-aiohttp/: bench.json  server.py
servers/rust-hyper-tokio-mt/: Cargo.toml  bench.json
servers/rust-hyper-tokio-mt/benchmark/: activity_metrics.jsonl  infrastructure.json  loadgen_errors.jsonl  loadgen_metrics.jsonl  metadata.json  runtime_metrics.jsonl  server_metrics.jsonl  summary.json
servers/rust-hyper-tokio-mt/src/: main.rs
web/: build.mjs  index.html  package-lock.json  package.json  server.mjs  vite.config.js
web/src/: App.jsx  (+3 more)
(+171 files in other folders)
