[package]
name = "bench-rust-hyper-tokio-mt"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
